git ignore y arbol.dot

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+arbol.png
+arbol.dot
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +34,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
